fix: logo making the nav to overflow on sm screen

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -204,6 +204,10 @@ h6 {
   #header .logo a {
     font-size: 1rem;
   }
+
+  #header .logo img {
+    width: 120px;
+  }
 }
 
 /*--------------------------------------------------------------
